infrastructure/kubernetes/mtls-config.yaml
---
# Enable strict mTLS for entire namespace
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: credential-system
spec:
  mtls:
    mode: STRICT

---
# Destination rule for mTLS between services
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vault
  namespace: credential-system
spec:
  host: vault
  trafficPolicy:
    tls:
      mode: MUTUAL
      clientCertificate: /etc/certs/client/cert.pem
      privateKey: /etc/certs/client/key.pem
      caCertificates: /etc/certs/ca/cert.pem
